fix overlapping link problem in sidebar

--- a/css/inner/dashboard.less
+++ b/css/inner/dashboard.less
@@ -75,12 +75,16 @@
    }
 
    .nav-menu-item {
-      &:hover {
-         color: #555;
-         text-decoration: none;
-         text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
-         background-clip: content-box;
-      }
+     padding-left: 0;
+     padding-right: 0;
+     margin-left: 0;
+     margin-right: 0;
+     &:hover {
+       color: #555;
+       text-decoration: none;
+       text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+       background-clip: content-box;
+     }
    }
 
    [class*="nav-menu-"] {
